# egui_console

./: Cargo.toml  LICENSE  README.md
demo/: Cargo.toml
demo/src/: app.rs  clap.rs  lib.rs  main.rs
src/: console.rs  lib.rs  tab.rs
