workspace = { members = ["demo"] }
[package]
name = "egui_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"

serde = "1.0.204"
serde_derive = "1.0.204"

[features]
persistence=[]



